@startuml

skinparam style strictuml
skinparam backgroundColor tomato
skinparam class{
BackgroundColor white
BorderColor maroon
FontColor maroon
ArrowColor maroon
FontStyle bold
AttributeIconSize 0
}
skinparam object{
BackgroundColor white
BorderColor maroon
FontColor maroon
ArrowColor maroon
FontStyle bold
AttributeIconSize 0
}
hide empty members

Start -->User

User -- GUI
GUI ---> Database
GUI - Menu
Database -> Menu
annotation Start{}
GUI --> End

class Database {
+ItemList
+ItemPrice
+AllergyWarning
+Filters()
}

class GUI{
+Allergy: Seafood, Nuts, Dairy
+Reads allergy()
+Prints Menu()
+Prints Bill()
}

object Menu{
+Appetizer
+MainCourse
+Dessert
+Beverages
}

class User {
+Specify allergy()
}

@enduml
